@@ -103,6 +103,7 @@ Version 1.7.0-svn:
      now causes a capture of that village.
    * Rewrote the layout algoritm (still a work in progress)
    * Fixed an multi-character UTF-8 handling bug in the password textbox
+   * Changed the tmessage dialog to be able to show four buttons
  * WML Engine:
    * Added [show_objectives] tag and allowed [show_if] tag in [objective]
      tags. (bug #13042)
